--- a/index.html
+++ b/index.html
@@ -85,12 +85,13 @@
                     <h2 class="mb-5">Skills</h2>
                     <div class="subheading mb-3">Programming Languages & Tools</div>
                     <ul class="list-inline dev-icons">
-                        <li class="list-inline-item"><i class="fab fa-html5"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-css3-alt"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-react"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-node-js"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-npm"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-python"></i></li>
+                        <li class="list-inline-item"><i class="fab fa-html5" title="HTML5"></i></li>
+                        <li class="list-inline-item"><i class="fab fa-css3-alt" title="CSS3"></i></li>
+                        <li class="list-inline-item"><i class="fab fa-react" title="React"></i></li>
+                        <li class="list-inline-item"><i class="fab fa-node-js" title="Node"></i></li>
+                        <li class="list-inline-item"><i class="fab fa-npm" title="NPM"></i></li>
+                        <li class="list-inline-item"><i class="fab fa-python" title="Python"></i></li>
+                        <li class="list-inline-item"><i class="fab fa-java" title="Java"></i></li>
                     </ul>
                     <div class="subheading mb-3">Workflow and Soft Skills</div>
                     <ul class="fa-ul mb-0">
