added Kanban to soft skills

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                     <div class="subheading mb-3">Workflow and Soft Skills</div>
                     <ul class="fa-ul mb-0">
                         <li>
-                            <span class="fa-li"><i class="fas fa-check"></i></span>Agile Development & Scrum
+                            <span class="fa-li"><i class="fas fa-check"></i></span>Agile, Kanban, and Scrum Development
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>Software and Requirement Engineering
