--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                     <h1 class="mb-0">Brendan <span class="text-primary">Hoffman</span></h1>
                     <div class="subheading mb-5">2104 Bastia · Newport Beach, CA 92660 · (831) 905-6687 · <a href="mailto:brendanjhoffman@gmail.com">brendanjhoffman@gmail.com</a></div>
                     <p class="lead mb-5">I'm a <b>software engineer</b> based in Newport Beach. I design for modularity and help customers turn their ideas into products.
-                        Currently, I an intern for RxPost but I'm <b>looking for a full-time role starting Fall 2020.</b>
+                        Currently, I am an intern for RxPost but I'm <b>looking for a full-time role starting Fall 2020.</b>
                         <br><br>
                         Outside of work, I'm a DIY'er, tinkerer, and musician. I love learning about hardware technologies and woodworking. My desk and PC setup has been the center of this since I first started building computers in high school. I first started playing guitar around 2010, and since then, I've applied that music knowledge and theory to other instruments. I'll often find myself exploring music production in Ableton. I've also been a brother of the Delta Sigma Phi fraternity, UCI Colony, since Fall of 2017.</p>
                     <div class="social-icons">
