--- a/index.html
+++ b/index.html
@@ -64,14 +64,14 @@
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Software Engineer</h3>
+                            <h3 class="mb-0"><a href="./projects/PMSNC.html">Software Engineer</a></h3>
                             <div class="subheading mb-3">Philippine Medical Society of Northern California</div>
                             <p>The PMSNC hosts an annual medical mission to the Philippines, often in places without internet. Consequently, patients were tracked using pen and paper, which led to many problems. To remedy this, I designed an electronic medical record that works over a local network.</p>
                         </div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Web Developer</h3>
+                            <h3 class="mb-0"><a href="./projects/RxPost">Web Developer</a></h3>
                             <div class="subheading mb-3">RxPost</div>
                             <p>RxPost is an online buyer-to-buyer e-commerce platform for independent pharmacies. My role in this team focused largely on working with backend technologies, mainly MySQLi and AWS services such as EC2 and S3. RxPost was built from scratch as my capstone project, and I'm currently continuing development, turning it from a minimum viable product to a full-fledge web app.</p>
                         </div>
