--- a/projects/RxPost.html
+++ b/projects/RxPost.html
@@ -48,9 +48,8 @@
             <br><br>
             <b>Thoughts, Process, and <span class="text-primary">Reflection</span></b>
             <br>
-            The timing for this couldn't have been better. By this time in college, I had just finished my Software and Requirement Engineering classes. My first elicitation meeting with the Calinga family clarified the work flow and what the apps core functionality was. After a bit of research, I found that Apache runs servers that other LAN users can access, SQL can handle the database backend, and PHP would communicate between the user and the server.
-            I remember sitting at a motel room desk on a trip to Portland, and feeling the thrill of finally getting "Hello World" to show up on \\localhost:8080 - because this was the first time I've worked with PHP, HTML, SQL, and all the networking that went into local apps. There were nights in the following months where I would stay up until 5 A.M. coding because I said I'd have a feature added by the morning after. I really owe a lot of that project to Stack Overflow, W3 Schools, and Geeks for Geeks, most of that time was spent researching on those sites. And this wasn't paid, or an internship, but I persevere because I said I would.
-            ...and it was worth every minute. January 27th, I got the follow up email I've been waiting for. <b>Seven thousand</b> patients were successfully tracked over the course of a week. I'm really proud of this project because not only was it for a good cause, but I taught myself the technology, applied what I learned in classes, and stuck to a self-disciplined work schedule.</p>
+            Hey Brendan, make sure you add this section later.
+            </p>
             <br><br>
         <!-- Core theme JS-->
         <script src="js/scripts.js"></script>
