fixed index page, should be final for now

--- a/index.html
+++ b/index.html
@@ -92,6 +92,7 @@
                         <li class="list-inline-item"><i class="fab fa-npm" title="NPM"></i></li>
                         <li class="list-inline-item"><i class="fab fa-python" title="Python"></i></li>
                         <li class="list-inline-item"><i class="fab fa-java" title="Java"></i></li>
+                        <li class="list-inline-item"><i class="fa fa-database" title="mySQL"></i></li>
                     </ul>
                     <div class="subheading mb-3">Workflow and Soft Skills</div>
                     <ul class="fa-ul mb-0">
@@ -119,7 +120,7 @@
                 <div class="resume-section-content">
                     <h2 class="mb-5">Blog</h2>
                     <h4><p>Interested in reading my thoughts on nothing important? </p></h4>
-                    <p class="mb-0">I'll put something here eventually. Maybe some links to my thoughts on my projects.</p>
+                    <p class="mb-0">I'll add some stuff here later. In the meantime, you can click on any title in my <a href="#experience">Experience and Education</a></li> section to read more about it!</p>
                 </div>
             </section>
             <hr class="m-0" />
