added twitter and skills to experience section

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                         <br><br>
                         Outside of work, I'm a DIY'er, tinkerer, and musician. I love learning about hardware technologies and woodworking. My desk and PC setup has been the center of this since I first started building computers in high school. I first started playing guitar around 2010, and since then, I've applied that music knowledge and theory to other instruments. I'll often find myself exploring music production in Ableton. I've also been a brother of the Delta Sigma Phi fraternity, UCI Colony, since Fall of 2017.</p>
                     <div class="social-icons">
-                        <a class="social-icon" href="https://www.linkedin.com/in/brendan-hoffman-0044b9179/"><i class="fab fa-linkedin-in"></i></a><a class="social-icon" href="https://github.com/brendanjhoffman"><i class="fab fa-github"></i></a><a class="social-icon" href="https://www.instagram.com/itsbrendanj_/"><i class="fab fa-instagram"></i></a>
+                        <a class="social-icon" href="https://www.linkedin.com/in/brendan-hoffman-0044b9179/"><i class="fab fa-linkedin-in"></i></a><a class="social-icon" href="https://github.com/brendanjhoffman"><i class="fab fa-github"></i></a><a class="social-icon" href="https://www.instagram.com/itsbrendanj_/"><i class="fab fa-instagram"></i></a><a class="social-icon" href="https://www.twitter.com/brendanjhoffman"><i class="fab fa-twitter"></i></a>
                         <!-- <a class="social-icon" href="#"><i class="fab fa-twitter"></i></a><a class="social-icon" href="#"><i class="fab fa-facebook-f"></i></a> -->
                     </div>
                 </div>
@@ -66,14 +66,14 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0"><a href="./projects/PMSNC.html"><u>Software Engineer</u></a></h3>
                             <div class="subheading mb-3">Philippine Medical Society of Northern California</div>
-                            <p>The PMSNC hosts an annual medical mission to the Philippines, often in places without internet. Consequently, patients were tracked using pen and paper, which led to many problems. To remedy this, I designed an electronic medical record that works over a local network.</p>
+                            <p>The PMSNC hosts an annual medical mission to the Philippines, often in places without internet. Consequently, patients were tracked using pen and paper, which led to many problems. To remedy this, I designed an electronic medical record that works over a local network. This required a lot of customer interaction and requirement engineering, as well as iteratively designing an application that included stakeholder input during each revision.</p>
                         </div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0"><a href="./projects/RxPost"><u>Web Developer</u></a></h3>
                             <div class="subheading mb-3">RxPost</div>
-                            <p>RxPost is an online buyer-to-buyer e-commerce platform for independent pharmacies. My role in this team focused largely on working with backend technologies, mainly MySQLi and AWS services such as EC2 and S3. RxPost was built from scratch as my capstone project, and I'm currently continuing development, turning it from a minimum viable product to a full-fledge web app.</p>
+                            <p>RxPost is an online buyer-to-buyer e-commerce platform for independent pharmacies. My role in this team focused largely on working with backend technologies, mainly MySQLi and AWS services such as EC2 and S3. RxPost was built from scratch as my capstone project, and I'm currently continuing development, turning it from a minimum viable product to a full-fledge web app. This required an agile environment, requirement engineering, and full stack implementation.</p>
                         </div>
                     </div>
                 </div>
