added ordained minister

--- a/index.html
+++ b/index.html
@@ -111,6 +111,9 @@
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>Computer Supported Cooperative Work and Social Analysis of Computing
                         </li>
+                        <li>
+                            <span class="fa-li"><i class="fas fa-check"></i></span>Ordained Minister
+                        </li>
                     </ul>
                 </div>
             </section>
