added donations at bottom

--- a/index.html
+++ b/index.html
@@ -124,6 +124,9 @@
                 </div>
             </section>
             <hr class="m-0" />
+            <footer>
+            	Feeling generous? Tech support tips are appreciated!<br>Venmo: @brendanjhoffman || PayPal: <a href="http://www.paypal.me/brendanjhoffman">paypal.me/brendanjhoffman</a><br><br>
+            </footer>
         </div>
         <!-- Bootstrap core JS-->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
