--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
             </section>
             <hr class="m-0" />
             <footer>
-            	Feeling generous? Tech support tips are appreciated!<br>Venmo: @brendanjhoffman || PayPal: <a href="http://www.paypal.me/brendanjhoffman">paypal.me/brendanjhoffman</a><br><br>
+            	Feeling generous? Tech support tips are appreciated!<br>Venmo: @brendanjhoffman || PayPal: <a href="http://www.paypal.me/brendanjhoffman">paypal.me/brendanjhoffman</a><br><br>This website was made using a template
             </footer>
         </div>
         <!-- Bootstrap core JS-->
