adding steam transfer tutorial

--- a/projects/PMSNC.html
+++ b/projects/PMSNC.html
@@ -27,6 +27,7 @@
                 <ul class="navbar-nav">
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="./RxPost.html">RxPost</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="./PMSNC.html">PMSNC</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="./SteamTransferring.html">Steam Transferring</a></li>
                 </ul>
             </div>
         </nav>
