--- a/projects/SteamTransferring.html
+++ b/projects/SteamTransferring.html
@@ -32,22 +32,21 @@
             </div>
         </nav>
         <!-- Page Content-->
-		<h1 class="mb-0">B2B eCommerce platform for <span class="text-primary">pharmacies</span></h1>
-            <div class="subheading mb-3"><h3><b>The <span class="text-primary"> collaborative</span> one.</b></h3></div>
-            <p class="lead mb-5">Did you know the Rx ( ℞ ) symbol is derived from the Latin word for "recipe" or to "take?" That's the origin of our team, "Team Latin For Recipe." Our sponsor, Amantha, came to UCI's Informatics department with a proposal: build an online buyer-to-buyer marketplace for independent pharmacies. <br><br>
-            I was lucky to partner up with Khoi, Alan, Yuya, Garry, and Josh to build RxPost.
-            <br><br>
-            <b>The <span class="text-primary">Problem</span>:</b>
+		<h1 class="mb-0">Transferring games on a<span class="text-primary"> local network.</span></h1>
+            <div class="subheading mb-3"><h3><b>The <span class="text-primary"> gaming</span> one.</b></h3></div>
             <br>
-            Pharmacies buy in bulk from wholesalers, and often have their drugs expire before they can sell. RxPost lets pharmacies buy and sell excess products, saving both parties money.
+            Look, you don't want to redownload a 12 gigabyte game and wait three hours, then wait another three for your roommate to download it. You don't want to download it at the same time and take eight hours. 
             <br><br>
-            <b>The <span class="text-primary">Solution</span>:</b>
-            <br>
-            I was excited for this project since displaying and manipulating an asynchronous database was nothing new to me <a href="./PMSNC.html"><span class="text-primary">(see PMSNC)</span></a>. We used a LAMP stack deployed on AWS. Although we all had weaknesses, we found our strengths. Khoi had experience with the PayPal API, Yuya was great at mockup design, Josh, Alan, and Garry worked on the front end, and I worked on writing the SQL calls in PHP, as well as managing our AWS EC2 instance.
+            <ul>
+                <li>Let's call the one who already downloaded a game the host, and the one who needs it the client.
+                <li>Host: make sure the folder that permission to be shared. Right click the folder you want to share and go to <b>Properties > Sharing > Share</b>.</li>
+                <li>Host: Press the <b>Win+R and type "cmd", press enter</b>. Take note of your name here: C:\Users\<b>USERNAME</b>>. Type "ipconfig"</b>. You should see a line <b>"IPv4 Address. . . : 192.168.X.XXX"</b>. Take note of that, too.</li>
+                <li>Client: Open explorer with Win+E. In the top bar (it'll say something like <i>Quick Access</i>). Paste in <b>\\192.168.X.XXX</b>.</li>
+                <li>Host: You'll have to log in to give the client access. Use your username from step 2 and your password that you use to log in.</li> 
+                <li>Client: Find the game you want. It'll probably be in something like X:\Steam\steamapps\common\GameName.
+                <li>Client: Copy and paste or drag and drop it to your Steam common folder, usually of similar location.
+            </ul>
             <br><br>
-            <b>Thoughts, Process, and <span class="text-primary">Reflection</span></b>
-            <br>
-            Hey Brendan, make sure you add this section later.
             </p>
             <br><br>
         <!-- Core theme JS-->
