--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <section class="resume-section" id="about">
                 <div class="resume-section-content">
                     <h1 class="mb-0">Brendan <span class="text-primary">Hoffman</span></h1>
-                    <div class="subheading mb-5">2104 Bastia · Newport Beach, CA 92660 · (831) 905-6687 · <a href="mailto:brendanjhoffman@gmail.com">brendanjhoffman@gmail.com</a></div>
+                    <div class="subheading mb-5">Newport Beach, CA 92660 · (831) 905-6687 · <a href="mailto:brendanjhoffman@gmail.com">brendanjhoffman@gmail.com</a></div>
                     <p class="lead mb-5">I'm a <b>software engineer</b> based in Newport Beach. I design for modularity and help customers turn their ideas into products.
                         Currently, I am a part-time web developer for RxPost but I'm <b>looking for a full-time role starting Fall 2020.</b>
                         <br><br>
